otawa/gliss2/irg/parser.output
   0  $accept : %entry% $end

   1  top : specs EOF

   2  LocatedID : ID

   3  specs : MachineSpec
   4        | specs MachineSpec

   5  MachineSpec : LetDef
   6              | TypeSpec
   7              | MemorySpec
   8              | RegisterSpec
   9              | VarSpec
  10              | ModeSpec
  11              | OpSpec
  12              | ResourceSpec
  13              | ExceptionSpec
  14              | ExtendSpec
  15              | CanonSpec

  16  LetDef : LET LocatedID EQ LetExpr

  17  ResourceSpec : RESOURCE ResourceList

  18  ResourceList : Resource
  19               | ResourceList COMMA Resource

  20  Resource : LocatedID
  21           | LocatedID LBRACK CARD_CONST RBRACK

  22  CanonSpec : CANON STRING_CONST LPAREN TypeList RPAREN
  23            | CANON Type STRING_CONST LPAREN TypeList RPAREN
  24            | CANON STRING_CONST LPAREN RPAREN
  25            | CANON Type STRING_CONST LPAREN RPAREN
  26            | CANON Type STRING_CONST

  27  TypeList : Type
  28           | TypeList COMMA Type

  29  ExceptionSpec : EXCEPTION IdentifierList

  30  IdentifierList : LocatedID
  31                 | IdentifierList COMMA LocatedID

  32  TypeSpec : TYPE LocatedID EQ TypeExpr

  33  TypeExpr : BOOL
  34           | INT LPAREN LetExpr RPAREN
  35           | CARD LPAREN LetExpr RPAREN
  36           | FIX LPAREN LetExpr COMMA LetExpr RPAREN
  37           | FLOAT LPAREN LetExpr COMMA LetExpr RPAREN
  38           | LBRACK LetExpr DOUBLE_DOT LetExpr RBRACK
  39           | ENUM LPAREN ValueList RPAREN

  40  ValueList : Value
  41            | ValueList COMMA Value

  42  Value : LetExpr
  43        | LetExpr DOUBLE_DOT LetExpr

  44  LetExpr : Expr

  45  MemorySpec : MEM LocatedID LBRACK MemPart RBRACK OptionalMemAttrDefList

  46  RegisterSpec : REG LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList

  47  VarSpec : VAR LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList

  48  MemPart : LetExpr COMMA Type
  49          | LetExpr

  50  RegPart : LetExpr COMMA Type
  51          | Type

  52  Type : TypeExpr
  53       | ID

  54  OptionalMemAttrDefList :
  55                         | MemAttrDefList

  56  MemAttrDefList : MemAttrDef
  57                 | MemAttrDefList MemAttrDef

  58  MemAttrDef : VOLATILE EQ LetExpr
  59             | INITIALA EQ LetExpr
  60             | PORTS EQ CARD_CONST COMMA CARD_CONST
  61             | USES EQ UsesDef
  62             | ALIAS EQ MemLocation
  63             | ID EQ Expr
  64             | ID EQ LBRACE Sequence RBRACE

  65  MemLocation : MemLocBase
  66              | MemLocBase BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT

  67  MemLocBase : ID
  68             | ID LBRACK Expr RBRACK

  69  ModeSpec : MODE LocatedID LPAREN ParamList RPAREN OptionalModeExpr AttrDefList
  70           | MODE LocatedID EQ Identifier_Or_List

  71  OptionalModeExpr :
  72                   | EQ Expr

  73  OpSpec : OP LocatedID LPAREN ParamList RPAREN AttrDefList
  74         | OP LocatedID EQ Identifier_Or_List
  75         | OP LocatedID error

  76  ExtendSpec : ExtendHeader AttrDefList

  77  ExtendHeader : EXTEND ExtendIDList

  78  ExtendIDList : ID
  79               | ExtendIDList COMMA ID

  80  Identifier_Or_List : ID
  81                     | Identifier_Or_List PIPE ID

  82  ParamList :
  83            | ParamListPart
  84            | ParamList COMMA ParamListPart

  85  ParamListPart : ID COLON ParaType

  86  ParaType : TypeExpr
  87           | ID

  88  AttrDefList :
  89              | NOAttrDefList

  90  NOAttrDefList : AttrDef
  91                | NOAttrDefList AttrDef

  92  AttrDef : ID EQ Expr
  93          | ID EQ LBRACE Sequence RBRACE
  94          | SYNTAX EQ AttrExpr
  95          | IMAGE EQ AttrExpr
  96          | ACTION EQ LBRACE Sequence RBRACE
  97          | USES EQ UsesDef
  98          | ID EQ error
  99          | ID error

 100  AttrExpr : Expr

 101  Sequence :
 102           | StatementList SEMI

 103  StatementList : Statement
 104                | StatementList SEMI Statement

 105  Statement :
 106            | ACTION
 107            | ID
 108            | ID LPAREN
 109            | ID DOT ACTION
 110            | ID DOT ID
 111            | Location EQ Expr
 112            | ConditionalStatement
 113            | STRING_CONST LPAREN ArgList RPAREN
 114            | ERROR LPAREN STRING_CONST RPAREN
 115            | LET ID EQ Expr
 116            | LET ID COLON Type EQ Expr

 117  ArgList :
 118          | Expr
 119          | ArgList COMMA Expr

 120  Opt_Bit_Optr :
 121               | BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT

 122  Location : ID
 123           | ID BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 124           | ID LBRACK Expr RBRACK
 125           | ID LBRACK Expr RBRACK BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 126           | Location DOUBLE_COLON Location
 127           | LPAREN Location RPAREN

 128  ConditionalStatement : IF Expr THEN Sequence OptionalElse ENDIF
 129                       | IF Expr THEN Sequence OptionalElse RBRACE
 130                       | SWITCH LPAREN Expr RPAREN LBRACE CaseBody RBRACE

 131  OptionalElse :
 132               | ELSE Sequence

 133  CaseBody : CaseList
 134           | OptCaseList Default OptCaseList

 135  OptCaseList :
 136              | CaseList

 137  CaseList : CaseStat
 138           | CaseList CaseStat

 139  CaseStat : CASE Expr COLON Sequence

 140  Default : DEFAULT COLON Sequence

 141  Expr : COERCE LPAREN Type COMMA Expr RPAREN
 142       | COERCE error
 143       | FORMAT LPAREN STRING_CONST COMMA ArgList RPAREN
 144       | FORMAT error
 145       | STRING_CONST LPAREN ArgList RPAREN
 146       | ID DOT SYNTAX
 147       | ID DOT IMAGE
 148       | ID DOT ID
 149       | Expr DOUBLE_COLON Expr
 150       | ID
 151       | ID LPAREN
 152       | ID LBRACK Expr RBRACK
 153       | ID LBRACK error
 154       | Expr BIT_LEFT Bit_Expr DOUBLE_DOT Bit_Expr GT
 155       | Expr PLUS Expr
 156       | Expr MINUS Expr
 157       | Expr STAR Expr
 158       | Expr SLASH Expr
 159       | Expr PERCENT Expr
 160       | Expr DOUBLE_STAR Expr
 161       | Expr LEFT_SHIFT Expr
 162       | Expr RIGHT_SHIFT Expr
 163       | Expr ROTATE_LEFT Expr
 164       | Expr ROTATE_RIGHT Expr
 165       | Expr LT Expr
 166       | Expr GT Expr
 167       | Expr LEQ Expr
 168       | Expr GEQ Expr
 169       | Expr EQU Expr
 170       | Expr NEQ Expr
 171       | Expr AMPERS Expr
 172       | Expr CIRC Expr
 173       | Expr PIPE Expr
 174       | EXCLAM Expr
 175       | TILD Expr
 176       | PLUS Expr
 177       | MINUS Expr
 178       | Expr AND Expr
 179       | Expr OR Expr
 180       | LPAREN Expr RPAREN
 181       | LPAREN error
 182       | LPAREN Expr error
 183       | IF Expr THEN Expr ELSE Expr ENDIF
 184       | IF error
 185       | SWITCH LPAREN Expr RPAREN LBRACE CaseExprBody RBRACE
 186       | SWITCH error
 187       | Constant

 188  Constant : FIXED_CONST
 189           | CARD_CONST
 190           | CARD_CONST_64
 191           | BIN_CONST
 192           | BIN_CONST_64
 193           | STRING_CONST

 194  Bit_Expr : ID
 195           | MINUS Bit_Expr
 196           | PLUS Bit_Expr
 197           | TILD Bit_Expr
 198           | Bit_Expr PLUS Bit_Expr
 199           | Bit_Expr MINUS Bit_Expr
 200           | Bit_Expr STAR Bit_Expr
 201           | Bit_Expr SLASH Bit_Expr
 202           | Bit_Expr PERCENT Bit_Expr
 203           | Bit_Expr DOUBLE_STAR Bit_Expr
 204           | Bit_Expr AMPERS Bit_Expr
 205           | Bit_Expr PIPE Bit_Expr
 206           | Bit_Expr CIRC Bit_Expr
 207           | LPAREN Bit_Expr RPAREN
 208           | FIXED_CONST
 209           | CARD_CONST
 210           | STRING_CONST

 211  CaseExprBody : CaseExprList
 212               | OptCaseExprList ExprDefault OptCaseExprList

 213  OptCaseExprList :
 214                  | CaseExprList

 215  CaseExprList : CaseExprStat
 216               | CaseExprList CaseExprStat

 217  CaseExprStat : CASE Expr COLON Expr

 218  ExprDefault : DEFAULT COLON Expr

 219  UsesDef : UsesOrSequence
 220          | UsesDef COMMA UsesOrSequence

 221  UsesOrSequence : UsesIfAtom
 222                 | UsesOrSequence PIPE UsesIfAtom

 223  UsesIfAtom : UsesIndirectAtom
 224             | IF Expr THEN UsesIfAtom OptionalElseAtom ENDIF

 225  OptionalElseAtom :
 226                   | ELSE UsesIfAtom

 227  UsesIndirectAtom : UsesCondAtom
 228                   | ID DOT USES
 229                   | LPAREN UsesDef RPAREN
 230                   | UsesLocationList AND ID DOT USES
 231                   | UsesLocationList AND LPAREN UsesDef RPAREN

 232  UsesCondAtom : UsesAndAtom
 233               | LBRACE Expr RBRACE UsesAndAtom

 234  UsesAndAtom : UsesLocationList UsesActionList

 235  UsesActionList :
 236                 | ActionTimeList OptionalAction
 237                 | TimeActionList OptionalTime

 238  ActionTimeList : SHARP LBRACE Expr RBRACE
 239                 | ActionTimeList COLON UsesActionAttr SHARP LBRACE Expr RBRACE

 240  TimeActionList : COLON UsesActionAttr
 241                 | TimeActionList SHARP LBRACE Expr RBRACE COLON UsesActionAttr

 242  OptionalAction :
 243                 | COLON UsesActionAttr

 244  OptionalTime :
 245               | SHARP LBRACE Expr RBRACE

 246  UsesActionAttr : ID
 247                 | ACTION

 248  UsesLocationList : UsesLocation
 249                   | UsesLocationList AMPERS UsesLocation

 250  UsesLocation : ID Opt_Bit_Optr
 251               | ID LBRACK Expr RBRACK Opt_SecDim Opt_Bit_Optr

 252  Opt_SecDim :
 253             | LBRACK RBRACK

 254  %entry% : '\001' top

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . top  (254)

	MEM  shift 3
	TYPE  shift 4
	LET  shift 5
	MODE  shift 6
	REG  shift 7
	VAR  shift 8
	OP  shift 9
	RESOURCE  shift 10
	EXCEPTION  shift 11
	EXTEND  shift 12
	CANON  shift 13
	.  error

	top  goto 14
	specs  goto 15
	MachineSpec  goto 16
	LetDef  goto 17
	TypeSpec  goto 18
	MemorySpec  goto 19
	RegisterSpec  goto 20
	VarSpec  goto 21
	ModeSpec  goto 22
	OpSpec  goto 23
	ResourceSpec  goto 24
	ExceptionSpec  goto 25
	ExtendSpec  goto 26
	CanonSpec  goto 27
	ExtendHeader  goto 28


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	MemorySpec : MEM . LocatedID LBRACK MemPart RBRACK OptionalMemAttrDefList  (45)

	ID  shift 29
	.  error

	LocatedID  goto 30


state 4
	TypeSpec : TYPE . LocatedID EQ TypeExpr  (32)

	ID  shift 29
	.  error

	LocatedID  goto 31


state 5
	LetDef : LET . LocatedID EQ LetExpr  (16)

	ID  shift 29
	.  error

	LocatedID  goto 32


state 6
	ModeSpec : MODE . LocatedID LPAREN ParamList RPAREN OptionalModeExpr AttrDefList  (69)
	ModeSpec : MODE . LocatedID EQ Identifier_Or_List  (70)

	ID  shift 29
	.  error

	LocatedID  goto 33


state 7
	RegisterSpec : REG . LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList  (46)

	ID  shift 29
	.  error

	LocatedID  goto 34


state 8
	VarSpec : VAR . LocatedID LBRACK RegPart RBRACK OptionalMemAttrDefList  (47)

	ID  shift 29
	.  error

	LocatedID  goto 35


state 9
	OpSpec : OP . LocatedID LPAREN ParamList RPAREN AttrDefList  (73)
	OpSpec : OP . LocatedID EQ Identifier_Or_List  (74)
	OpSpec : OP . LocatedID error  (75)

	ID  shift 29
	.  error

	LocatedID  goto 36


state 10
	ResourceSpec : RESOURCE . ResourceList  (17)

	ID  shift 29
	.  error

	LocatedID  goto 37
	ResourceList  goto 38
	Resource  goto 39


state 11
	ExceptionSpec : EXCEPTION . IdentifierList  (29)

	ID  shift 29
	.  error

	LocatedID  goto 40
	IdentifierList  goto 41


state 12
	ExtendHeader : EXTEND . ExtendIDList  (77)

	ID  shift 42
	.  error

	ExtendIDList  goto 43


state 13
	CanonSpec : CANON . STRING_CONST LPAREN TypeList RPAREN  (22)
	CanonSpec : CANON . Type STRING_CONST LPAREN TypeList RPAREN  (23)
	CanonSpec : CANON . STRING_CONST LPAREN RPAREN  (24)
	CanonSpec : CANON . Type STRING_CONST LPAREN RPAREN  (25)
	CanonSpec : CANON . Type STRING_CONST  (26)

	ID  shift 44
	STRING_CONST  shift 45
	BOOL  shift 46
	INT  shift 47
	CARD  shift 48
	FIX  shift 49
	FLOAT  shift 50
	ENUM  shift 51
	LBRACK  shift 52
	.  error

	Type  goto 53
	TypeExpr  goto 54


state 14
	%entry% : '\001' top .  (254)

	.  reduce 254


state 15
	top : specs . EOF  (1)
	specs : specs . MachineSpec  (4)

	EOF  shift 55
	MEM  shift 3
	TYPE  shift 4
	LET  shift 5
	MODE  shift 6
	REG  shift 7
	VAR  shift 8
	OP  shift 9
	RESOURCE  shift 10
	EXCEPTION  shift 11
	EXTEND  shift 12
	CANON  shift 13
	.  error

	MachineSpec  goto 56
	LetDef  goto 17
	TypeSpec  goto 18
	MemorySpec  goto 19
	RegisterSpec  goto 20
	VarSpec  goto 21
	ModeSpec  goto 22
	OpSpec  goto 23
	ResourceSpec  goto 24
	ExceptionSpec  goto 25
	ExtendSpec  goto 26
	CanonSpec  goto 27
	ExtendHeader  goto 28


state 16
	specs : MachineSpec .  (3)

	.  reduce 3


state 17
	MachineSpec : LetDef .  (5)

	.  reduce 5


state 18
	MachineSpec : TypeSpec .  (6)

	.  reduce 6


state 19
	MachineSpec : MemorySpec .  (7)

	.  reduce 7


state 20
	MachineSpec : RegisterSpec .  (8)

	.  reduce 8


state 21
	MachineSpec : VarSpec .  (9)

	.  reduce 9


state 22
	MachineSpec : ModeSpec .  (10)

	.  reduce 10


state 23
	MachineSpec : OpSpec .  (11)

	.  reduce 11


state 24
	MachineSpec : ResourceSpec .  (12)

	.  reduce 12


state 25
	MachineSpec : ExceptionSpec .  (13)

	.  reduce 13


state 26
	MachineSpec : ExtendSpec .  (14)

	.  reduce 14


state 27
	MachineSpec : CanonSpec .  (15)

	.  reduce 15


state 28
	ExtendSpec : ExtendHeader . AttrDefList  (76)
	AttrDefList : .  (88)

	ID  shift 57
	USES  shift 58
	SYNTAX  shift 59
	IMAGE  shift 60
	ACTION  shift 61
	EOF  reduce 88
	MEM  reduce 88
	TYPE  reduce 88
	LET  reduce 88
	MODE  reduce 88
	REG  reduce 88
	VAR  reduce 88
	OP  reduce 88
	RESOURCE  reduce 88
	EXCEPTION  reduce 88
	EXTEND  reduce 88
	CANON  reduce 88

	AttrDefList  goto 62
	NOAttrDefList  goto 63
	AttrDef  goto 64


state 29
	LocatedID : ID .  (2)

	.  reduce 2


state 30
	MemorySpec : MEM LocatedID . LBRACK MemPart RBRACK OptionalMemAttrDefList  (45)

	LBRACK  shift 65
	.  error


state 31
	TypeSpec : TYPE LocatedID . EQ TypeExpr  (32)

	EQ  shift 66
	.  error


state 32
	LetDef : LET LocatedID . EQ LetExpr  (16)

	EQ  shift 67
	.  error


state 33
	ModeSpec : MODE LocatedID . LPAREN ParamList RPAREN OptionalModeExpr AttrDefList  (69)
	ModeSpec : MODE LocatedID . EQ Identifier_Or_List  (70)

	EQ  shift 68
	LPAREN  shift 69
	.  error


state 34
	RegisterSpec : REG LocatedID . LBRACK RegPart RBRACK OptionalMemAttrDefList  (46)

	LBRACK  shift 70
	.  error


state 35
	VarSpec : VAR LocatedID . LBRACK RegPart RBRACK OptionalMemAttrDefList  (47)

	LBRACK  shift 71
	.  error


state 36
	OpSpec : OP LocatedID . LPAREN ParamList RPAREN AttrDefList  (73)
	OpSpec : OP LocatedID . EQ Identifier_Or_List  (74)
	OpSpec : OP LocatedID . error  (75)

	error  shift 72
	EQ  shift 73
	LPAREN  shift 74
	.  error


state 37
	Resource : LocatedID .  (20)
	Resource : LocatedID . LBRACK CARD_CONST RBRACK  (21)

	LBRACK  shift 75
	EOF  reduce 20
	MEM  reduce 20
	TYPE  reduce 20
	LET  reduce 20
	MODE  reduce 20
	REG  reduce 20
	VAR  reduce 20
	OP  reduce 20
	RESOURCE  reduce 20
	EXCEPTION  reduce 20
	COMMA  reduce 20
	EXTEND  reduce 20
	CANON  reduce 20


state 38
	ResourceSpec : RESOURCE ResourceList .  (17)
	ResourceList : ResourceList . COMMA Resource  (19)

	COMMA  shift 76
	EOF  reduce 17
	MEM  reduce 17
	TYPE  reduce 17
	LET  reduce 17
	MODE  reduce 17
	REG  reduce 17
	VAR  reduce 17
	OP  reduce 17
	RESOURCE  reduce 17
	EXCEPTION  reduce 17
	EXTEND  reduce 17
	CANON  reduce 17


state 39
	ResourceList : Resource .  (18)

	.  reduce 18


state 40
	IdentifierList : LocatedID .  (30)

	.  reduce 30


state 41
	ExceptionSpec : EXCEPTION IdentifierList .  (29)
	IdentifierList : IdentifierList . COMMA LocatedID  (31)

	COMMA  shift 77
	EOF  reduce 29
	MEM  reduce 29
	TYPE  reduce 29
	LET  reduce 29
	MODE  reduce 29
	REG  reduce 29
	VAR  reduce 29
	OP  reduce 29
	RESOURCE  reduce 29
	EXCEPTION  reduce 29
	EXTEND  reduce 29
	CANON  reduce 29


state 42
	ExtendIDList : ID .  (78)

	.  reduce 78


state 43
	ExtendHeader : EXTEND ExtendIDList .  (77)
	ExtendIDList : ExtendIDList . COMMA ID  (79)

	COMMA  shift 78
	ID  reduce 77
	EOF  reduce 77
	MEM  reduce 77
	TYPE  reduce 77
	LET  reduce 77
	MODE  reduce 77
	REG  reduce 77
	VAR  reduce 77
	OP  reduce 77
	USES  reduce 77
	SYNTAX  reduce 77
	IMAGE  reduce 77
	ACTION  reduce 77
	RESOURCE  reduce 77
	EXCEPTION  reduce 77
	EXTEND  reduce 77
	CANON  reduce 77


state 44
	Type : ID .  (53)

	.  reduce 53


state 45
	CanonSpec : CANON STRING_CONST . LPAREN TypeList RPAREN  (22)
	CanonSpec : CANON STRING_CONST . LPAREN RPAREN  (24)

	LPAREN  shift 79
	.  error


state 46
	TypeExpr : BOOL .  (33)

	.  reduce 33


state 47
	TypeExpr : INT . LPAREN LetExpr RPAREN  (34)

	LPAREN  shift 80
	.  error


state 48
	TypeExpr : CARD . LPAREN LetExpr RPAREN  (35)

	LPAREN  shift 81
	.  error


state 49
	TypeExpr : FIX . LPAREN LetExpr COMMA LetExpr RPAREN  (36)

	LPAREN  shift 82
	.  error


state 50
	TypeExpr : FLOAT . LPAREN LetExpr COMMA LetExpr RPAREN  (37)

	LPAREN  shift 83
	.  error


state 51
	TypeExpr : ENUM . LPAREN ValueList RPAREN  (39)

	LPAREN  shift 84
	.  error


state 52
	TypeExpr : LBRACK . LetExpr DOUBLE_DOT LetExpr RBRACK  (38)

	ID  shift 85
	CARD_CONST  shift 86
	CARD_CONST_64  shift 87
	FIXED_CONST  shift 88
	STRING_CONST  shift 89
	BIN_CONST  shift 90
	BIN_CONST_64  shift 91
	COERCE  shift 92
	IF  shift 93
	SWITCH  shift 94
	FORMAT  shift 95
	EXCLAM  shift 96
	PLUS  shift 97
	MINUS  shift 98
	TILD  shift 99
	LPAREN  shift 100
	.  error

	LetExpr  goto 101
	Expr  goto 102
	Constant  goto 103


state 53
	CanonSpec : CANON Type . STRING_CONST LPAREN TypeList RPAREN  (23)
	CanonSpec : CANON Type . STRING_CONST LPAREN RPAREN  (25)
	CanonSpec : CANON Type . STRING_CONST  (26)

	STRING_CONST  shift 104
	.  error


state 54
	Type : TypeExpr .  (52)

	.  reduce 52


state 55
	top : specs EOF .  (1)

	.  reduce 1


state 56
	specs : specs MachineSpec .  (4)

	.  reduce 4


state 57
	AttrDef : ID . EQ Expr  (92)
	AttrDef : ID . EQ LBRACE Sequence RBRACE  (93)
	AttrDef : ID . EQ error  (98)
	AttrDef : ID . error  (99)

	error  shift 105
	EQ  shift 106
	.  error


state 58
	AttrDef : USES . EQ UsesDef  (97)

	EQ  shift 107
	.  error


state 59
	AttrDef : SYNTAX . EQ AttrExpr  (94)

	EQ  shift 108
	.  error


state 60
	AttrDef : IMAGE . EQ AttrExpr  (95)

	EQ  shift 109
	.  error


state 61
	AttrDef : ACTION . EQ LBRACE Sequence RBRACE  (96)

	EQ  shift 110
	.  error


state 62
	ExtendSpec : ExtendHeader AttrDefList .  (76)

	.  reduce 76


state 63
	AttrDefList : NOAttrDefList .  (89)
	NOAttrDefList : NOAttrDefList . AttrDef  (91)

	ID  shift 57
	USES  shift 58
	SYNTAX  shift 59
	IMAGE  shift 60
	ACTION  shift 61
	EOF  reduce 89
	MEM  reduce 89
	TYPE  reduce 89
	LET  reduce 89
	MODE  reduce 89
	REG  reduce 89
	VAR  reduce 89
	OP  reduce 89
	RESOURCE  reduce 89
	EXCEPTION  reduce 89
	EXTEND  reduce 89
	CANON  reduce 89

	AttrDef  goto 111


state 64
	NOAttrDefList : AttrDef .  (90)

	.  reduce 90


state 65
	MemorySpec : MEM LocatedID LBRACK . MemPart RBRACK OptionalMemAttrDefList  (45)

	ID  shift 85
	CARD_CONST  shift 86
	CARD_CONST_64  shift 87
	FIXED_CONST  shift 88
	STRING_CONST  shift 89
	BIN_CONST  shift 90
	BIN_CONST_64  shift 91
	COERCE  shift 92
	IF  shift 93
	SWITCH  shift 94
	FORMAT  shift 95
	EXCLAM  shift 96
	PLUS  shift 97
	MINUS  shift 98
	TILD  shift 99
	LPAREN  shift 100
	.  error

	LetExpr  goto 112
	Expr  goto 102
	MemPart  goto 113
	Constant  goto 103


state 66
	TypeSpec : TYPE LocatedID EQ . TypeExpr  (32)

	BOOL  shift 46
	INT  shift 47
	CARD  shift 48
	FIX  shift 49
	FLOAT  shift 50
	ENUM  shift 51
	LBRACK  shift 52
	.  error

	TypeExpr  goto 114


state 67
	LetDef : LET LocatedID EQ . LetExpr  (16)

	ID  shift 85
	CARD_CONST  shift 86
	CARD_CONST_64  shift 87
	FIXED_CONST  shift 88
	STRING_CONST  shift 89
	BIN_CONST  shift 90
	BIN_CONST_64  shift 91
	COERCE  shift 92
	IF  shift 93
	SWITCH  shift 94
	FORMAT  shift 95
	EXCLAM  shift 96
	PLUS  shift 97
	MINUS  shift 98
	TILD  shift 99
	LPAREN  shift 100
	.  error

	LetExpr  goto 115
	Expr  goto 102
	Constant  goto 103


state 68
	ModeSpec : MODE LocatedID EQ . Identifier_Or_List  (70)

	ID  shift 116
	.  error

	Identifier_Or_List  goto 117


state 69
	ModeSpec : MODE LocatedID LPAREN . ParamList RPAREN OptionalModeExpr AttrDefList  (69)
	ParamList : .  (82)

	ID  shift 118
	COMMA  reduce 82
	RPAREN  reduce 82

	ParamList  goto 119
	ParamListPart  goto 120


state 70
	RegisterSpec : REG LocatedID LBRACK . RegPart RBRACK OptionalMemAttrDefList  (46)

	ID  shift 121
	CARD_CONST  shift 86
	CARD_CONST_64  shift 87
	FIXED_CONST  shift 88
	STRING_CONST  shift 89
	BIN_CONST  shift 90
	BIN_CONST_64  shift 91
	COERCE  shift 92
	IF  shift 93
	SWITCH  shift 94
	BOOL  shift 46
	INT  shift 47
	CARD  shift 48
	FIX  shift 49
	FLOAT  shift 50
	ENUM  shift 51
	FORMAT  shift 95
	EXCLAM  shift 96
	PLUS  shift 97
	MINUS  shift 98
	TILD  shift 99
	LBRACK  shift 52
	LPAREN  shift 100
	.  error

	LetExpr  goto 122
	Type  goto 123
	TypeExpr  goto 54
	Expr  goto 102
	RegPart  goto 124
	Constant  goto 103


state 71
	VarSpec : VAR LocatedID LBRACK . RegPart RBRACK OptionalMemAttrDefList  (47)

	ID  shift 121
	CARD_CONST  shift 86
	CARD_CONST_64  shift 87
	FIXED_CONST  shift 88
	STRING_CONST  shift 89
	BIN_CONST  shift 90
	BIN_CONST_64  shift 91
	COERCE  shift 92
	IF  shift 93
	SWITCH  shift 94
	BOOL  shift 46
	INT  shift 47
	CARD  shift 48
	FIX  shift 49
	FLOAT  shift 50
	ENUM  shift 51
	FORMAT  shift 95
	EXCLAM  shift 96
	PLUS  shift 97
	MINUS  shift 98
	TILD  shift 99
	LBRACK  shift 52
	LPAREN  shift 100
	.  error

	LetExpr  goto 122
	Type  goto 123
	TypeExpr  goto 54
	Expr  goto 102
	RegPart  goto 125
	Constant  goto 103


state 72
	OpSpec : OP LocatedID error .  (75)

	.  reduce 75


state 73
	OpSpec : OP LocatedID EQ . Identifier_Or_List  (74)

	ID  shift 116
	.  error

	Identifier_Or_List  goto 126


state 74
	OpSpec : OP LocatedID LPAREN . ParamList RPAREN AttrDefList  (73)
	ParamList : .  (82)

	ID  shift 118
	COMMA  reduce 82
	RPAREN  reduce 82

	ParamList  goto 127
	ParamListPart  goto 120


state 75
	Resource : LocatedID LBRACK . CARD_CONST RBRACK  (21)

	CARD_CONST  shift 128
	.  error


state 76
	ResourceList : ResourceList COMMA . Resource  (19)

	ID  shift 29
	.  error

	LocatedID  goto 37
	Resource  goto 129


state 77
	IdentifierList : IdentifierList COMMA . LocatedID  (31)

	ID  shift 29
	.  error

	LocatedID  goto 130


state 78
	ExtendIDList : ExtendIDList COMMA . ID  (79)

	ID  shift 131
	.  error


state 79
	CanonSpec : CANON STRING_CONST LPAREN . TypeList RPAREN  (22)
	CanonSpec : CANON STRING_CONST LPAREN . RPAREN  (24)

	ID  shift 44
	BOOL  shift 46
	INT  shift 47
	CARD  shift 48
	FIX  shift 49
	FLOAT  shift 50
	ENUM  shift 51
	LBRACK  shift 52
	RPAREN  shift 132
	.  error

	TypeList  goto 133
	Type  goto 134
	TypeExpr  goto 54


state 80
	TypeExpr : INT LPAREN . LetExpr RPAREN  (34)

	ID  shift 85
	CARD_CONST  shift 86
	CARD_CONST_64  shift 87
	FIXED_CONST  shift 88
	STRING_CONST  shift 89
	BIN_CONST  shift 90
	BIN_CONST_64  shift 91
	COERCE  shift 92
	IF  shift 93
	SWITCH  shift 94
	FORMAT  shift 95
	EXCLAM  shift 96
	PLUS  shift 97
	MINUS  shift 98
	TILD  shift 99
	LPAREN  shift 100
	.  error

	LetExpr  goto 135
	Expr  goto 102
	Constant  goto 103


state 81
	TypeExpr : CARD LPAREN . LetExpr RPAREN  (35)

	ID  shift 85
	CARD_CONST  shift 86
	CARD_CONST_64  shift 87
	FIXED_CONST  shift 88
	STRING_CONST  shift 89
	BIN_CONST  shift 90
	BIN_CONST_64  shift 91
	COERCE  shift 92
	IF  shift 93
	SWITCH  shift 94
	FORMAT  shift 95
	EXCLAM  shift 96
	PLUS  shift 97
	MINUS  shift 98
	TILD  shift 99
	LPAREN  shift 100
	.  error

	LetExpr  goto 136
	Expr  goto 102
	Constant  goto 103


state 82
	TypeExpr : FIX LPAREN . LetExpr COMMA LetExpr RPAREN  (36)

	ID  shift 85
	CARD_CONST  shift 86
	CARD_CONST_64  shift 87
	FIXED_CONST  shift 88
	STRING_CONST  shift 89
	BIN_CONST  shift 90
	BIN_CONST_64  shift 91
	COERCE  shift 92
	IF  shift 93
	SWITCH  shift 94
	FORMAT  shift 95
	EXCLAM  shift 96
	PLUS  shift 97
	MINUS  shift 98
	TILD  shift 99
	LPAREN  shift 100
	.  error

	LetExpr  goto 137
	Expr  goto 102
	Constant  goto 103


state 83
	TypeExpr : FLOAT LPAREN . LetExpr COMMA LetExpr RPAREN  (37)

	ID  shift 85
	CARD_CONST  shift 86
	CARD_CONST_64  shift 87
	FIXED_CONST  shift 88
	STRING_CONST  shift 89
	BIN_CONST  shift 90
	BIN_CONST_64  shift 91
	COERCE  shift 92
	IF  shift 93
	SWITCH  shift 94
	FORMAT  shift 95
	EXCLAM  shift 96
	PLUS  shift 97
	MINUS  shift 98
	TILD  shift 99
	LPAREN  shift 100
	.  error
